[build-system]
requires = ["setuptools>=42",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hierts"
version = "0.5"
authors = [
  { name="Olivier Sprangers", email="o.r.sprangers@uva.nl" },
]
description = "Hierarchical time series reconciliation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas >= 1.3.5",
    "numba >= 0.53.0",
    "scipy >= 1.7.3",
    "scikit-learn >= 1.0.2"
]

[project.urls]
Source = "https://github.com/elephaint/hierts"
Documentation = "https://hierts.readthedocs.io/en/latest/index.html"